k8s/skaleet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk-payments-service
  labels:
    app: sk-payments-service
  namespace: skaleet
spec:
  selector:
    matchLabels:
      app: sk-payments-service
  template:
    metadata:
      labels:
        app: sk-payments-service
    spec:
      volumes:
      - name: kongapay-config
        configMap:
          name: kongapay-config
      containers:
      - image: acrkongapayshared.azurecr.io/sk-payments-service:latest
        name: sk-payments-service
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        volumeMounts:
        - name: kongapay-config
          mountPath: /creds/kongapay-config.json
          subPath: kongapay-config.json
