k8s/skaleet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk-payments-service
  namespace: skaleet
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: sk-payments-service
